--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-.bundle
-db/*.sqlite3
-log/*.log
-tmp/**/*
-tmp/*
-*~
-config/database.yml
-config/app_config.yml
-public/system
+!.keep
+*.DS_Store
 *.swp
+*~
+.bundle
+.sass-cache/
+/.vagrant
+/cookbooks
+config/app_config.yml
+config/database.yml
+db/*.sqlite3
 db/legacy
-.DS_Store
-tags
-cookbooks
+log/*.log
+public/system
+tmp/*
+tmp/**/*
