--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,15 @@
 *.DS_Store
 *.swp
 *~
-.bundle
-.sass-cache/
+/.bundle
+/.sass-cache
 /.vagrant
 /cookbooks
-config/app_config.yml
-config/database.yml
-db/*.sqlite3
-db/legacy
-log/*.log
-public/system
-tmp/*
-tmp/**/*
+/config/app_config.yml
+/config/database.yml
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/db/legacy
+/log/*.log
+/public/system
+/tmp
