--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_script:
 - cp config/database.yml.travis config/database.yml
 script:
 - bundle exec /usr/bin/env RAILS_ENV=test rake db:drop db:create db:schema:load
-- bundle exec /usr/bin/env RAILS_ENV=test rspec
+- bundle exec /usr/bin/env RAILS_ENV=test rake test
+- bundle exec /usr/bin/env RAILS_ENV=test rake spec
 branches:
   only:
   - develop
