update secret configs for integration

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -16,7 +16,10 @@ development:
 test:
   secret_key_base: 
 
-staging:
+integration:
+  secret_key_base: 
+
+qa:
   secret_key_base: 
 
 production:
