--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 before_script:
 - cp config/database.yml.travis config/database.yml
 script:
-- bundle exec /usr/bin/env RAILS_ENV=test rake db:drop db:create db:schema:load
+- bundle exec /usr/bin/env RAILS_ENV=test rake db:test:prepare
 - bundle exec /usr/bin/env RAILS_ENV=test rake test
 - bundle exec /usr/bin/env RAILS_ENV=test rake spec
 branches:
