--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,16 @@ language: ruby
 cache: bundler
 bundler_args: "--without development"
 rvm:
-- 2.2.1
-before_install:
- - sudo apt-get update
- - sudo apt-get install libgeos-dev libproj-dev
+  - 2.2.1
+addons:
+  postgresql: "9.3"
 before_script:
-- cp config/database.yml.travis config/database.yml
-- psql -U postgres -c "create extension postgis"
+  - psql -U postgres -c "create database ridepilot_test"
+  - psql -U postgres -d ridepilot_test -c "create extension postgis"
 script:
-- bundle exec /usr/bin/env RAILS_ENV=test rake db:test:prepare
-- bundle exec /usr/bin/env RAILS_ENV=test rake test
-- bundle exec /usr/bin/env RAILS_ENV=test rake spec
+  - bundle exec /usr/bin/env RAILS_ENV=test rake db:test:prepare
+  - bundle exec /usr/bin/env RAILS_ENV=test rake test
+  - bundle exec /usr/bin/env RAILS_ENV=test rake spec
 branches:
   only:
   - develop
