--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
   - 2.2.1
 before_script:
   - cp config/database.yml.travis config/database.yml
+  - psql -U postgres -c "create extension postgis"
 script:
   - bundle exec /usr/bin/env RAILS_ENV=test rake db:drop db:create db:schema:load db:seed
   - bundle exec /usr/bin/env RAILS_ENV=test rake test
