--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -U postgres -c "create extension postgis"
 script:
-- bundle exec /usr/bin/env RAILS_ENV=test rake db:test:prepare
+- bundle exec /usr/bin/env RAILS_ENV=test rake db:drop db:create db:reset
 - bundle exec /usr/bin/env RAILS_ENV=test rake test
 - bundle exec /usr/bin/env RAILS_ENV=test rake spec
 branches:
