--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -1,23 +1,28 @@
-RIDE_CONNECTION_ADMIN_EMAIL:
-RIDE_CONNECTION_ADMIN_PASSWORD:
-SYSTEM_SEND_FROM_ADDRESS:
-SMTP_MAIL_ADDR:
-SMTP_MAIL_PORT:
-SMTP_MAIL_DOMAIN:
-SMTP_MAIL_USER_NAME:
-SMTP_MAIL_PASSWORD:
+# all configurable environments: 
+#   development
+#   test
+#   integration
+#   qa
+#   production
 
 development:
-  RIDEPILOT_HOST:                
+  RIDE_CONNECTION_ADMIN_EMAIL:
+  RIDE_CONNECTION_ADMIN_PASSWORD:
+  RIDEPILOT_HOST:
+  SYSTEM_SEND_FROM_ADDRESS:
+  SMTP_MAIL_ADDR:
+  SMTP_MAIL_PORT:
+  SMTP_MAIL_DOMAIN:
+  SMTP_MAIL_USER_NAME:
+  SMTP_MAIL_PASSWORD:
 
 test:
-  RIDEPILOT_HOST:                 
-
-integration:
-  RIDEPILOT_HOST:                 
-
-qa:
-  RIDEPILOT_HOST:                 
-
-production:
-  RIDEPILOT_HOST:                 
+  RIDE_CONNECTION_ADMIN_EMAIL:
+  RIDE_CONNECTION_ADMIN_PASSWORD:
+  RIDEPILOT_HOST:
+  SYSTEM_SEND_FROM_ADDRESS:
+  SMTP_MAIL_ADDR:
+  SMTP_MAIL_PORT:
+  SMTP_MAIL_DOMAIN:
+  SMTP_MAIL_USER_NAME:
+  SMTP_MAIL_PASSWORD:               
