--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -U postgres -c "create extension postgis"
 script:
-- bundle exec /usr/bin/env RAILS_ENV=test rake db:drop db:create db:reset
-- bundle exec /usr/bin/env RAILS_ENV=test rake test
-- bundle exec /usr/bin/env RAILS_ENV=test rake spec
+- bundle exec /usr/bin/env RAILS_ENV=test rake db:drop db:create db:schema:load ridepilot:load_locales
+- bundle exec /usr/bin/env RAILS_ENV=test rspec
 branches:
   only:
   - develop
