remove ride_connection admin configuration; cleanup seed file to seed UTA as first provider

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -6,8 +6,8 @@
 #   production
 
 development:
-  RIDE_CONNECTION_ADMIN_EMAIL:
-  RIDE_CONNECTION_ADMIN_PASSWORD:
+  SYSTEM_ADMIN_EMAIL:
+  SYSTEM_ADMIN_PASSWORD:
   RIDEPILOT_HOST:
   SYSTEM_SEND_FROM_ADDRESS:
   SMTP_MAIL_ADDR:
@@ -17,8 +17,8 @@ development:
   SMTP_MAIL_PASSWORD:
 
 test:
-  RIDE_CONNECTION_ADMIN_EMAIL:
-  RIDE_CONNECTION_ADMIN_PASSWORD:
+  SYSTEM_ADMIN_EMAIL:
+  SYSTEM_ADMIN_PASSWORD:
   RIDEPILOT_HOST:
   SYSTEM_SEND_FROM_ADDRESS:
   SMTP_MAIL_ADDR:
