Add MapRequest API key as ENV variable; Update MapRequest URL; Adjust MapRequest response parsing; Only return addresses within provider map extent

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -17,6 +17,7 @@ development:
   SMTP_MAIL_PASSWORD:
   REDISCLOUD_URL:
   AWS_BUCKET:
+  MAPREQUEST_API_KEY:
 
 test:
   SYSTEM_ADMIN_EMAIL:
@@ -29,3 +30,4 @@ test:
   SMTP_MAIL_USER_NAME:
   SMTP_MAIL_PASSWORD:
   REDISCLOUD_URL:
+  MAPREQUEST_API_KEY:
