Add trip_planner that wraps open_trip_planner web sersice call to calculate drive distance and time; Added drive_distance to trips table

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -18,6 +18,7 @@ development:
   REDISCLOUD_URL:
   AWS_BUCKET:
   MAPREQUEST_API_KEY:
+  OPEN_TRIP_PLANNER_URL:
 
 test:
   SYSTEM_ADMIN_EMAIL:
@@ -31,3 +32,4 @@ test:
   SMTP_MAIL_PASSWORD:
   REDISCLOUD_URL:
   MAPREQUEST_API_KEY:
+  OPEN_TRIP_PLANNER_URL:
