--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
 script:
 - bundle exec /usr/bin/env RAILS_ENV=test rake db:test:prepare
 - bundle exec /usr/bin/env RAILS_ENV=test rspec
+services:
+  - redis-server
 branches:
   only:
   - develop
