Adding application setting for controlling Sidekiq connection to custom Redis URL

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -19,6 +19,9 @@ development:
   AWS_BUCKET:
   MAPREQUEST_API_KEY:
   OPEN_TRIP_PLANNER_URL:
+  
+  # For Sidekiq. You can typically leave this as-is (https://goo.gl/kg5fiU)
+  REDIS_PROVIDER: REDISCLOUD_URL
 
 test:
   SYSTEM_ADMIN_EMAIL:
@@ -33,3 +36,6 @@ test:
   REDISCLOUD_URL:
   MAPREQUEST_API_KEY:
   OPEN_TRIP_PLANNER_URL:
+  
+  # For Sidekiq. You can typically leave this as-is (https://goo.gl/kg5fiU)
+  REDIS_PROVIDER: REDISCLOUD_URL
