--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /config/app_config.yml
 /config/database.yml
 /config/deploy.rb
+/config/uat_deploy.rb
 /config/unicorn.production.rb
 /db/*.sqlite3
 /db/*.sqlite3-journal
