Attempt to fix travis issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
-cache: bundler
-bundler_args: "--without development"
 rvm:
 - 2.2.1
+install:
+- bundle install --no-deployment
 before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -U postgres -c "create extension postgis"
