--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: ruby
 rvm:
-- 2.2.2
+- 2.2.1
+before_install:
+  - gem update --system
+  - gem --version
+  - gem install bundler
 install:
 - bundle install --no-deployment
 before_script:
