Add postgis package to travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
+sudo: false
+addons:
+  postgresql: "9.5"
+  apt:
+    packages:
+      - postgresql-9.5-postgis-2.3
 language: ruby
 cache: bundler
 bundler_args: "--without development"
 rvm:
 - 2.2.1
 before_install:
-  - gem update --system 2.4.6
-  - gem --version
+  - gem install bundler
 before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -U postgres -c "create extension postgis"
