add action_cable and first channel for emergency alert

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,8 +1,17 @@
 development:
-  adapter: async
+  adapter: redis
+  url: redis://localhost:6379/1
 
 test:
   adapter: async
+
+integration:
+  adapter: redis
+  url: redis://localhost:6379/1
+
+qa:
+  adapter: redis
+  url: redis://localhost:6379/1
 
 production:
   adapter: redis
