--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,12 +7,12 @@ test:
 
 integration:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV.fetch('REDISCLOUD_URL', 'redis://localhost:6379/1') %>
 
 qa:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV.fetch('REDISCLOUD_URL', 'redis://localhost:6379/1') %>
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV.fetch('REDISCLOUD_URL', 'redis://localhost:6379/1') %>
