--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 volumes:  
-  postgres_data: {} 
+  postgres_data:
   redis:
 services:
   db:    
@@ -11,7 +11,7 @@ services:
   redis:
     image: 'redis:4.0-alpine'
     volumes:
-      - 'redis:/data' 
+      - redis:/data
 
   app:    
     build:      
@@ -20,8 +20,12 @@ services:
     depends_on:      
       - db  
       - redis
+    env_file:
+      - ./docker/.env
     ports:
       - 3000:3000
+    volumes:
+      - .:/var/www/ridepilot
 
   web:    
     build:      
@@ -39,6 +43,8 @@ services:
     build: 
       context: .
       dockerfile: ./docker/app/Dockerfile
+    env_file:
+      - ./docker/.env
     command: bundle exec sidekiq -C config/sidekiq.yml
     volumes:
       - .:/var/www/ridepilot
